--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node index.js"
+    "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "keywords": [],
   "author": "",
