--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
     "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "keywords": [],
