Adding styles to make the app not look like literal trash

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node index.js",
-    "heroku-postbuild": "cd client && yarn && yarn run build"
+    "heroku-postbuild": "cd client && yarn && yarn run build",
+    "deploy": "git push && git push heroku master"
   },
   "keywords": [],
   "author": "",
